Archive2/ce/181b4c8e4650a0/output
main.cpp:3:21: error: call to implicitly-deleted default constructor of 'decltype(lambda1)' (aka '(lambda at main.cpp:2:18)')
  decltype(lambda1) lambda2;
                    ^
main.cpp:2:18: note: lambda expression begins here
  auto lambda1 = []() mutable {};
                 ^
1 error generated.
